--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
 <body>
     <h1>Mis Restaurantes Favoritos</h1>
 
+    <h2>Restaurante 1</h2>
+    <img src="restaurante1.jpg" alt="Restaurante 1">
+    <p>Ubicación: Ciudad o dirección</p>
+    <p>Menú: Breve descripción del tipo de comida</p>
+
+    <h2>Restaurante 2</h2>
+    <img src="restaurante2.jpg" alt="Restaurante 2">
+    <p>Ubicación: Ciudad o dirección</p>
+    <p>Menú: Breve descripción del tipo de comida</p>
+
+    <h2>Restaurante 1</h2>
+    <img src="restaurante1.jpg" alt="Restaurante 1">
+    <p>Ubicación: Ciudad o dirección</p>
+    <p>Menú: Breve descripción del tipo de comida</p>
+
+    <h2>Restaurante 2</h2>
+    <img src="restaurante2.jpg" alt="Restaurante 2">
+    <p>Ubicación: Ciudad o dirección</p>
+    <p>Menú: Breve descripción del tipo de comida</p>
+
+    <h2>Restaurante 5</h2>
+    <img src="restaurante1.jpg" alt="Restaurante 1">
+    <p>Ubicación: Ciudad o dirección</p>
+    <p>Menú: Breve descripción del tipo de comida</p>
+
+  
+
     
 </body>
 </html>
