--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Mis Restaurantes Favoritos</h1>
 
-    <h2>Restaurante 1</h2>
+    <h2>1. Andrés Carne de Res</h2>
     <img src="restaurante1.jpg" alt="Restaurante 1">
     <p>Ubicación: Ciudad o dirección</p>
     <p>Menú: Breve descripción del tipo de comida</p>
