--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Mis Restaurantes Favoritos</h1>
 
     <h2>1. Andrés Carne de Res</h2>
-    <img src="restaurante1.jpg" alt="Restaurante 1">
+    <img src="https://www.andrescarnederes.com/uploads/images/galeria/660af6d9b027c628039048.jpg" alt="Imagen del sitio Andrés Carne de Res">
     <p>Ubicación: Ciudad o dirección</p>
     <p>Menú: Breve descripción del tipo de comida</p>
 
