--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h2>1. Andrés Carne de Res</h2>
     <img src="https://www.andrescarnederes.com/uploads/images/galeria/660af6d9b027c628039048.jpg" alt="Imagen del sitio Andrés Carne de Res">
-    <p>Ubicación: Ciudad o dirección</p>
+    <p><strong>Ubicación:</strong> Chía, Cundinamarca, Colombia.</p>
     <p>Menú: Breve descripción del tipo de comida</p>
 
     <h2>Restaurante 2</h2>
