--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h2>1. Andrés Carne de Res</h2>
     <img src="https://www.andrescarnederes.com/uploads/images/galeria/660af6d9b027c628039048.jpg" alt="Imagen del sitio Andrés Carne de Res">
     <p><strong>Ubicación:</strong> Chía, Cundinamarca, Colombia.</p>
-    <p>Menú: Breve descripción del tipo de comida</p>
+    <p><strong>Descripción del menú:</strong> Restaurante colombiano famoso por su carne a la parrilla, platos típicos y ambiente festivo.</p>
+
 
     <h2>Restaurante 2</h2>
     <img src="restaurante2.jpg" alt="Restaurante 2">
