--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p><strong>Descripción del menú:</strong> Restaurante colombiano famoso por su carne a la parrilla, platos típicos y ambiente festivo.</p>
 
 
-    <h2>Restaurante 2</h2>
-    <img src="restaurante2.jpg" alt="Restaurante 2">
+    <h2>2. El Celler de Can Roca</h2>
+    <img src="restaurante2.jpg" alt="Imagen de el Celler de Can Roca">
     <p>Ubicación: Ciudad o dirección</p>
     <p>Menú: Breve descripción del tipo de comida</p>
 
