--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h2>2. El Celler de Can Roca</h2>
     <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0d/70/ad/a1/mesas-en-el-comedor-con.jpg?w=500&h=-1&s=1" alt="Imagen de el Celler de Can Roca">
-    <p>Ubicación: Ciudad o dirección</p>
+    <p><strong>Ubicación:</strong> Girona, España.</p>
     <p>Menú: Breve descripción del tipo de comida</p>
 
     <h2>Restaurante 1</h2>
