--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>2. El Celler de Can Roca</h2>
     <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0d/70/ad/a1/mesas-en-el-comedor-con.jpg?w=500&h=-1&s=1" alt="Imagen de el Celler de Can Roca">
     <p><strong>Ubicación:</strong> Girona, España.</p>
-    <p>Menú: Breve descripción del tipo de comida</p>
+    <p><strong>Descripción del menú:</strong> Cocina de autor con platos innovadores, considerado uno de los mejores restaurantes del mundo.</p>
 
     <h2>Restaurante 1</h2>
     <img src="restaurante1.jpg" alt="Restaurante 1">
