--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <p><strong>Ubicación:</strong> Girona, España.</p>
     <p><strong>Descripción del menú:</strong> Cocina de autor con platos innovadores, considerado uno de los mejores restaurantes del mundo.</p>
 
-    <h2>Restaurante 1</h2>
-    <img src="restaurante1.jpg" alt="Restaurante 1">
+    <h2>3. Central</h2>
+    <img src="restaurante1.jpg" alt="Imagen de Central">
     <p>Ubicación: Ciudad o dirección</p>
     <p>Menú: Breve descripción del tipo de comida</p>
 
