--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p><strong>Descripción del menú:</strong> Cocina de autor con platos innovadores, considerado uno de los mejores restaurantes del mundo.</p>
 
     <h2>3. Central</h2>
-    <img src="restaurante1.jpg" alt="Imagen de Central">
+    <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/prisa/LCL7RLZIPJCKXFVHEYD3NK35ZI.jpg" alt="Imagen de Central">
     <p>Ubicación: Ciudad o dirección</p>
     <p>Menú: Breve descripción del tipo de comida</p>
 
