--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h2>3. Central</h2>
     <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/prisa/LCL7RLZIPJCKXFVHEYD3NK35ZI.jpg" alt="Imagen de Central">
-    <p>Ubicación: Ciudad o dirección</p>
+    <p><strong>Ubicación:</strong> Lima, Perú.</p>
     <p>Menú: Breve descripción del tipo de comida</p>
 
     <h2>Restaurante 2</h2>
