--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>3. Central</h2>
     <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/prisa/LCL7RLZIPJCKXFVHEYD3NK35ZI.jpg" alt="Imagen de Central">
     <p><strong>Ubicación:</strong> Lima, Perú.</p>
-    <p>Menú: Breve descripción del tipo de comida</p>
+    <p><strong>Descripción del menú:</strong> Ofrece un recorrido gastronómico por los ecosistemas peruanos, con ingredientes únicos de la región.</p>
 
     <h2>Restaurante 2</h2>
     <img src="restaurante2.jpg" alt="Restaurante 2">
