todo sobre el restaurante 4,17

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <p><strong>Ubicación:</strong> Lima, Perú.</p>
     <p><strong>Descripción del menú:</strong> Ofrece un recorrido gastronómico por los ecosistemas peruanos, con ingredientes únicos de la región.</p>
 
-    <h2>Restaurante 2</h2>
-    <img src="restaurante2.jpg" alt="Restaurante 2">
-    <p>Ubicación: Ciudad o dirección</p>
-    <p>Menú: Breve descripción del tipo de comida</p>
+    <h2>4. Pujol</h2>
+    <img src="https://images.squarespace-cdn.com/content/v1/62c0918972f37e3fad1564cb/dc105027-0f30-4ccb-9b61-5ffcea9e1fe3/JSa_Pujol_LGM_0098.jpg" alt="Pujol México" width="300">
+    <p><strong>Ubicación:</strong> Ciudad de México, México.</p>
+    <p><strong>Descripción del menú:</strong> Alta cocina mexicana que combina tradición y modernidad, con su famoso mole madre.</p>
 
     <h2>Restaurante 5</h2>
     <img src="restaurante1.jpg" alt="Restaurante 1">
