todo sobre el restaurante 5,18

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <p><strong>Ubicación:</strong> Ciudad de México, México.</p>
     <p><strong>Descripción del menú:</strong> Alta cocina mexicana que combina tradición y modernidad, con su famoso mole madre.</p>
 
-    <h2>Restaurante 5</h2>
-    <img src="restaurante1.jpg" alt="Restaurante 1">
-    <p>Ubicación: Ciudad o dirección</p>
-    <p>Menú: Breve descripción del tipo de comida</p>
+    <h2>5. Harry Sasson</h2>
+    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0c/82/f3/e8/vista-del-restaurante.jpg?w=900&h=500&s=1" alt="Harry Sasson Bogotá" width="300">
+    <p><strong>Ubicación:</strong> Bogotá, Colombia.</p>
+    <p><strong>Descripción del menú:</strong> Fusión de cocina internacional y colombiana, con énfasis en carnes, mariscos y sabores gourmet.</p>
 
   
 
