ajuste de imagenes,19

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <h1>Mis Restaurantes Favoritos</h1>
 
     <h2>1. Andrés Carne de Res</h2>
-    <img src="https://www.andrescarnederes.com/uploads/images/galeria/660af6d9b027c628039048.jpg" alt="Imagen del sitio Andrés Carne de Res">
+    <img src="https://www.andrescarnederes.com/uploads/images/galeria/660af6d9b027c628039048.jpg" alt="Imagen del sitio Andrés Carne de Res" width="300">
     <p><strong>Ubicación:</strong> Chía, Cundinamarca, Colombia.</p>
     <p><strong>Descripción del menú:</strong> Restaurante colombiano famoso por su carne a la parrilla, platos típicos y ambiente festivo.</p>
 
 
     <h2>2. El Celler de Can Roca</h2>
-    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0d/70/ad/a1/mesas-en-el-comedor-con.jpg?w=500&h=-1&s=1" alt="Imagen de el Celler de Can Roca">
+    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0d/70/ad/a1/mesas-en-el-comedor-con.jpg?w=500&h=-1&s=1" alt="Imagen de el Celler de Can Roca" width="300">
     <p><strong>Ubicación:</strong> Girona, España.</p>
     <p><strong>Descripción del menú:</strong> Cocina de autor con platos innovadores, considerado uno de los mejores restaurantes del mundo.</p>
 
     <h2>3. Central</h2>
-    <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/prisa/LCL7RLZIPJCKXFVHEYD3NK35ZI.jpg" alt="Imagen de Central">
+    <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/prisa/LCL7RLZIPJCKXFVHEYD3NK35ZI.jpg" alt="Imagen de Central " width="300">
     <p><strong>Ubicación:</strong> Lima, Perú.</p>
     <p><strong>Descripción del menú:</strong> Ofrece un recorrido gastronómico por los ecosistemas peruanos, con ingredientes únicos de la región.</p>
 
